包结构调整

--- a/thinking-in-spring/ioc-container-overview/pom.xml
+++ b/thinking-in-spring/ioc-container-overview/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>dependency-lookup</artifactId>
+    <artifactId>ioc-container-overview</artifactId>
 
     <dependencies>
         <!-- spring IoC 核心依赖 -->
